--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>心似v尘埃的博客 by yinjiangping</title>
+    <title>心似v尘埃的博客</title>
   </head>
 
   <body>
@@ -20,13 +20,7 @@
         <header>
           <h1>心似v尘埃的博客</h1>
           <h2></h2>
-        </header>
-
-        <section id="downloads" class="clearfix">
-          <a href="https://github.com/yinjiangping" id="view-on-github" class="button"><span>View on GitHub</span></a>
-        </section>
-
-        <hr>
+        </header
 
         <section id="main_content">
           <p>hello world!</p>
